@startuml
skinparam classAttributeIconSize 0

abstract class BasicProgressBarUI {
}

class CustomProgressBarUI {
  + paintDeterminate(Graphics g, JComponent c) : void
}

class DemoScreen {
  - fondo : FondoPanel
  + DemoScreen()
  + initComponents() : void
  - jButton1ActionPerformed(java.awt.event.ActionEvent evt) : void
  - jButton2ActionPerformed(java.awt.event.ActionEvent evt) : void
  - jButton3ActionPerformed(java.awt.event.ActionEvent evt) : void
  - jButton4ActionPerformed(java.awt.event.ActionEvent evt) : void
  - jButton5ActionPerformed(java.awt.event.ActionEvent evt) : void
  - jButton6ActionPerformed(java.awt.event.ActionEvent evt) : void
  + main(String[] args) : void
  ~ FondoPanel3 : JPanel
  ~ FondoPanel4 : JPanel
  ~ FondoPanel5 : JPanel
  ~ FondoPanel6 : JPanel
  ~ FondoPanel7 : JPanel
  ~ FondoPanel8 : JPanel
  ~ FondoPanel : JPanel
}

class FondoPanel3 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel4 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel5 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel6 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel7 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel8 {
  - imagen : Image
  + paint(Graphics g) : void
}

class FondoPanel {
  - imagen : Image
  + paint(Graphics g) : void
}

BasicProgressBarUI <|-- CustomProgressBarUI
DemoScreen *-- FondoPanel
DemoScreen *-- FondoPanel3
DemoScreen *-- FondoPanel4
DemoScreen *-- FondoPanel5
DemoScreen *-- FondoPanel6
DemoScreen *-- FondoPanel7
DemoScreen *-- FondoPanel8

@enduml